Code quality improvements (#79)
* Simplified cache creation

* Code quality improvements

* Merge branch 'main' of github-dhruv1110-private:dhruv1110/jcachex into dp/design_pattern

# Conflicts:
#	jcachex-core/src/main/java/io/github/dhruv1110/jcachex/profiles/CacheProfileBuilder.java
#	jcachex-kotlin/src/main/kotlin/io/github/dhruv1110/jcachex/kotlin/CacheExtensions.kt
#	jcachex-spring/src/main/java/io/github/dhruv1110/jcachex/spring/core/JCacheXCacheFactory.java
#	jcachex-spring/src/main/java/io/github/dhruv1110/jcachex/spring/core/JCacheXCacheManager.java

* Removed duplications

* Removed duplications

* Removed duplications

---------

Co-authored-by: dhruv1110 <dhruv1110@users.noreply.github.com>